--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=ClinicaApp
 server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/clinica-db
-spring.datasource.username=jhonson
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 jwt.secret=${JWT_SECRET}
